# remark

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
.github/workflows/: build_windows.yml
migrations/2024-06-02-072416_create_all/: down.sql  up.sql
migrations/2024-06-02-091630_create_all/: down.sql  up.sql
migrations/2024-06-07-060214_remove_staged/: down.sql
migrations/2024-06-07-072325_create_all/: down.sql  up.sql
migrations/2024-08-19-175832_create_tags/: up.sql
migrations/2024-08-19-175841_create_task_tags/: up.sql
migrations/2024-08-19-221114_create_task_tags/: down.sql  up.sql
migrations/2024-08-20-063453_add_on_delete_cascade_to_tasks/: down.sql  up.sql
migrations/2024-08-20-064148_add_on_delete_cascade_to_task_tags/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs  serializable.rs
src/cli/: mod.rs
src/commands/: export.rs  import.rs  mod.rs
src/commands/project/: add.rs  create.rs  edit.rs  list.rs  mod.rs  print.rs  remove.rs
src/commands/report/: generate.rs  list.rs  mod.rs  open.rs  print.rs  remove.rs
src/commands/task/: add.rs  edit.rs  list.rs  mod.rs  print.rs  remove.rs  stage.rs  unstage.rs
src/data/: mod.rs
src/errors/: mod.rs
src/utils/: mod.rs
